SETools 3.2:

libapol, libqpol, libesaudit, libpoldiff:

  * If --enable-swig-python is given during configure time, the build
    system will create Python SWIG wrappers for these libraries.

libpoldiff:

  * Now able to diff levels, categories, and range_transition
    statements.  Able to diff modifications to a user's default level
    and permitted MLS range, assuming the policies are MLS
    
apol, seaudit, sediffx:

  * Introducing 'policy list', a small text file that contains
    references to a base policy and any number of modules.  After
    selecting the base policy and modules in a tool's open policy
    dialog, click on 'Export' to write a policy list to disk.  The
    same policy list may then be imported into that tool or any other
    graphical SETools application. This file may also be specified
    on the command line for all tools that load a policy.

sesearch, apol:

  * Full support for version 21 policy (i.e., object classes for
    range_transition statements).

sediff:

  * Now shows MLS diffs.

sediffx:

  * Now shows MLS diffs.

  * Click upon AV rules' permissions to show line numbers that
    contributed just that permission, rather than the entire AV rule.

  * Support for type joins and splits within the type remap dialog.

==================================================

SETools 3.1:

SETools:

  * All tools that open a policy now support loadable policy modules.
    Command line tools expect the first module to be a base module
    followed optionally by any other modules.  Graphical tools have
    a new open policy dialog to select a base module and any number of
    additional modules.

  * Release of RPM packages that are compatible with Fedora Core 5 and
    6.  The spec and support files are in packages/rpm.

libapol:

  * New class apol_policy_path_t to represent a base policy and any
    number of modules.  Use this whenever referring to the file or
    files constituting a policy.
  
libqpol:
